View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026245 | Open CASCADE | OCCT:Shape Healing | public | 2015-05-20 15:11 | 2015-10-23 20:50 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026245: Unable to write SAT file by default | ||||
Description | Writing of SAT file is impossible while the environment variable CSF_SATDefaults is not assigned. Note, that it is not set by default. | ||||
Steps To Reproduce | 1. Clone OCC Products repository 2. Build OCC Products 3. Run any test from sat test grid Result: Test failed, because WriteSat command failed. The root of the problem is XSAlgo_AlgoContainer::ProcessShape in lines 169-170: if ( !ShapeProcess::Perform(context, seq) ) return TopoDS_Shape(); // Null shape ShapeProcess::Perform unable to find specified sequence (seq) and corresponding resources. Therefore it returns Null shape. | ||||
Tags | No tags attached. | ||||
Test case number | sat read bug26245 | ||||
|
Please describe in more details what happens |
|
Branch CR26245 has been created by abv. SHA-1: 46232440115184ef69256b78b4ce8df957bd9105 Detailed log of new commits: Author: abv Date: Mon Aug 31 07:00:57 2015 +0300 0026245: Unable to write SAT file by default XSAlgo_AlgoContainer is corrected to return original shape if Shape Processing fails. Handling of situation of absence of defined operator sequence is corrected to apply DirectFaces operator by default on writing, regardless of target format. ShapeProcess is corrected to output warning if operator sequence is not defined in resource file. Message names are made more meaningful. |
|
Branch CR26245 has been updated forcibly by abv. SHA-1: d6e0044df2c6f040be9cf203d95680c0e2cd13a1 |
|
Branch CR26245 has been updated forcibly by abv. SHA-1: 6032e43f39c307407e8ab74dd73ba507665a13b6 |
|
Fix pushed to CR26245, please review |
|
Branch CR26245 is ready to be tested. |
|
Dear BugMaster, Branch CR26245 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 6032e43f39c307407e8ab74dd73ba507665a13b6 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26245-master-products-64/Debian70-64/sat/read/bug26245.html http://occt-tests/CR26245-master-products-64/Windows-64-VC10/sat/read/bug26245.html sat read bug26245: OK Testing on Linux: occt component : Total MEMORY difference: 91209808 / 91145657 [+0.07%] Total CPU difference: 17376.689999998845 / 16906.539999999288 [+2.78%] products component : Total MEMORY difference: 25200684 / 25216901 [-0.06%] Total CPU difference: 7365.769999999989 / 7037.939999999998 [+4.66%] Testing on Windows: occt component : Total MEMORY difference: 57100191 / 57088045 [+0.02%] Total CPU difference: 16470.772781198968 / 16439.697381998914 [+0.19%] products component : Total MEMORY difference: 16229482 / 16228570 [+0.01%] Total CPU difference: 5374.203249799972 / 5334.079792599963 [+0.75%] There are no differences in images found by testdiff. |
|
Dear BugMaster, following test case was created and pushed to new branch CR26245 of products git-repository sat read bug26245 |
|
Dear abv, could you please review following test case sat read bug26245 |
|
Please avoid unnecessary complications in the test script: - no need to use catch for satwrite and satread commands -- if it fails with exception, it will be recognized by the test system anyway (unless you have disabled somehow this generic feature) - no need to parse result of checkshape command in the script -- test system should do that due to relevant rule in parse.rules - no need to set dozen of variables nb_* -- use command checknbshapes explicitly instead |
|
Dear BugMaster, following test case was corrected and pushed to branch CR26245 of products git-repository sat read bug26245 |
|
Dear BugMaster, Branch CR26245 is TESTED. |
|
Branch CR26245 has been deleted by kgv. SHA-1: 6032e43f39c307407e8ab74dd73ba507665a13b6 |
occt: master 881536e2 2015-08-31 04:00:57
Committer: bugmaster Details Diff |
0026245: Unable to write SAT file by default XSAlgo_AlgoContainer is corrected to return original shape if Shape Processing fails. Handling of situation of absence of defined operator sequence is corrected to apply DirectFaces operator by default on writing, regardless of target format. ShapeProcess is corrected to output warning if operator sequence is not defined in resource file, and to continue if one operator in sequence has failed. Message names are made more meaningful. |
Affected Issues 0026245 |
|
mod - src/ShapeProcess/ShapeProcess.cxx | Diff File | ||
mod - src/SHMessage/SHAPE.fr | Diff File | ||
mod - src/SHMessage/SHAPE.us | Diff File | ||
mod - src/XSAlgo/XSAlgo_AlgoContainer.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-05-20 15:11 |
|
New Issue | |
2015-05-20 15:11 |
|
Assigned To | => szv |
2015-05-20 15:17 |
|
Note Added: 0041316 | |
2015-05-20 15:35 |
|
Steps to Reproduce Updated | |
2015-08-27 11:33 |
|
Assigned To | szv => anv |
2015-08-27 11:33 |
|
Status | new => assigned |
2015-08-30 19:48 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-08-30 19:48 |
|
Assigned To | anv => abv |
2015-08-31 11:09 | git | Note Added: 0044874 | |
2015-08-31 11:11 | git | Note Added: 0044875 | |
2015-08-31 11:14 | git | Note Added: 0044876 | |
2015-08-31 11:15 |
|
Category | PRODUCTS:ACIS Export => OCCT:Shape Healing |
2015-08-31 11:15 |
|
Note Added: 0044878 | |
2015-08-31 11:15 |
|
Assigned To | abv => gka |
2015-08-31 11:15 |
|
Status | assigned => resolved |
2015-08-31 11:20 |
|
Note Added: 0044879 | |
2015-08-31 11:20 |
|
Assigned To | gka => bugmaster |
2015-08-31 11:20 |
|
Status | resolved => reviewed |
2015-08-31 16:23 |
|
Assigned To | bugmaster => mkv |
2015-09-01 14:07 |
|
Note Added: 0044929 | |
2015-09-01 14:09 |
|
Note Added: 0044930 | |
2015-09-01 14:10 |
|
Note Added: 0044931 | |
2015-09-01 14:10 |
|
Assigned To | mkv => abv |
2015-09-01 14:10 |
|
Status | reviewed => feedback |
2015-09-01 14:10 |
|
Test case number | => sat read bug26245 |
2015-09-09 11:11 |
|
Assigned To | abv => mkv |
2015-09-09 11:16 |
|
Note Added: 0045290 | |
2015-09-10 15:40 |
|
Note Added: 0045430 | |
2015-09-10 15:40 |
|
Assigned To | mkv => bugmaster |
2015-09-10 15:40 |
|
Status | feedback => tested |
2015-09-10 15:40 |
|
Note Added: 0045431 | |
2015-09-11 14:09 | bugmaster | Changeset attached | => occt master 881536e2 |
2015-09-11 14:09 | bugmaster | Status | tested => verified |
2015-09-11 14:09 | bugmaster | Resolution | open => fixed |
2015-10-16 14:55 |
|
Status | verified => closed |
2015-10-16 16:37 | git | Note Added: 0046972 | |
2015-10-23 20:50 |
|
Fixed in Version | => 6.9.1 |